started the second task

--- a/ml_hw2.ipynb
+++ b/ml_hw2.ipynb
@@ -982,12 +982,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 277,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.924 0.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "bow = CountVectorizer()\n",
+    "bow.fit_transform(balanced['message'])\n",
+    "bowed_messages = bow.transform(balanced['message'])\n",
+    "\n",
+    "tree = DecisionTreeClassifier(min_samples_split=5)\n",
+    "tree.fit(bowed_messages, balanced['label'])\n",
+    "cv_results = cross_val_score(tree, bowed_messages, balanced['label'], cv=10, scoring='accuracy')\n",
+    "print(round(cv_results.mean(), 3), round(cv_results.std(), 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Дерево решений работает значительно хуже."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.936 0.018\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "model = RandomForestClassifier()\n",
+    "model.fit(bowed_messages, balanced['label'])\n",
+    "cv_results = cross_val_score(model, bowed_messages, balanced['label'], cv=10, scoring='accuracy')\n",
+    "print(round(cv_results.mean(), 3), round(cv_results.std(), 3))"
+   ]
   },
   {
    "cell_type": "code",
@@ -996,7 +1046,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "Рандомный лес"
+   ]
   }
  ],
  "metadata": {
