third task. it was a very big hw...

--- a/ml_hw2.ipynb
+++ b/ml_hw2.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 351,
    "metadata": {
     "collapsed": false
    },
@@ -1269,40 +1269,330 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Делаю фичами длину сообщения словах. Потому что ~~могу~~ наверное что-то из этого длиннее."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 354,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "balanced['word_length'] = balanced['message'].map(lambda text: len(text.split()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Делаю фичами количество капсовых букв в сообщении. Просмотр данных глазами показывает, что в спаме ОЧЕНЬ МНОГО КАПСА."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 353,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>message</th>\n",
+       "      <th>word_length</th>\n",
+       "      <th>num_of_caps</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4674</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>I forgot 2 ask ü all smth.. There's a card on ...</td>\n",
+       "      <td>25</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>220</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Yeah you should. I think you can use your gt a...</td>\n",
+       "      <td>35</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1664</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>S but mostly not like that.</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>332</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Maybe i could get book out tomo then return it...</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4343</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Ha! I wouldn't say that I just didn't read any...</td>\n",
+       "      <td>27</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     label                                            message  word_length  \\\n",
+       "4674   ham  I forgot 2 ask ü all smth.. There's a card on ...           25   \n",
+       "220    ham  Yeah you should. I think you can use your gt a...           35   \n",
+       "1664   ham                        S but mostly not like that.            6   \n",
+       "332    ham  Maybe i could get book out tomo then return it...           14   \n",
+       "4343   ham  Ha! I wouldn't say that I just didn't read any...           27   \n",
+       "\n",
+       "      num_of_caps  \n",
+       "4674            3  \n",
+       "220             4  \n",
+       "1664            1  \n",
+       "332             2  \n",
+       "4343            4  "
+      ]
+     },
+     "execution_count": 353,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import string\n",
+    "def count_caps(text):\n",
+    "    return len([sym for sym in text if sym in string.ascii_uppercase])\n",
+    "balanced['num_of_caps'] = balanced['message'].map(count_caps)\n",
+    "balanced.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 355,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>message</th>\n",
+       "      <th>word_length</th>\n",
+       "      <th>num_of_caps</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5537</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>Want explicit SEX in 30 secs? Ring 02073162414...</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5540</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>ASKED 3MOBILE IF 0870 CHATLINES INCLU IN FREE ...</td>\n",
+       "      <td>33</td>\n",
+       "      <td>104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5547</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>Had your contract mobile 11 Mnths? Latest Moto...</td>\n",
+       "      <td>28</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5566</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>REMINDER FROM O2: To get 2.50 pounds free call...</td>\n",
+       "      <td>28</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5567</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>This is the 2nd time we have tried 2 contact u...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     label                                            message  word_length  \\\n",
+       "5537  spam  Want explicit SEX in 30 secs? Ring 02073162414...           16   \n",
+       "5540  spam  ASKED 3MOBILE IF 0870 CHATLINES INCLU IN FREE ...           33   \n",
+       "5547  spam  Had your contract mobile 11 Mnths? Latest Moto...           28   \n",
+       "5566  spam  REMINDER FROM O2: To get 2.50 pounds free call...           28   \n",
+       "5567  spam  This is the 2nd time we have tried 2 contact u...           30   \n",
+       "\n",
+       "      num_of_caps  \n",
+       "5537           17  \n",
+       "5540          104  \n",
+       "5547           20  \n",
+       "5566           14  \n",
+       "5567            9  "
+      ]
+     },
+     "execution_count": 355,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "balanced.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 363,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sms_y = balanced['label']\n",
+    "sms_x = balanced.loc[:, ('word_length', 'num_of_caps')]\n",
+    "train_x, test_x, train_y, test_y = train_test_split(sms_x, sms_y, test_size=0.2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 364,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        ham       0.69      0.92      0.79       140\n",
+      "       spam       0.90      0.64      0.75       159\n",
+      "\n",
+      "avg / total       0.80      0.77      0.77       299\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "naive_model = MultinomialNB()\n",
+    "naive_model.fit(train_x, train_y)\n",
+    "predict_y = naive_model.predict(test_x)\n",
+    "print(classification_report(test_y, predict_y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "С наивным Байесом получилось очень плохо."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 365,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        ham       0.85      0.89      0.87       140\n",
+      "       spam       0.90      0.86      0.88       159\n",
+      "\n",
+      "avg / total       0.88      0.88      0.88       299\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tree = DecisionTreeClassifier()\n",
+    "tree.fit(train_x, train_y)\n",
+    "predict_y = tree.predict(test_x)\n",
+    "print(classification_report(test_y, predict_y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "С деревом внезапно гораздо лучше."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 366,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        ham       0.88      0.89      0.89       140\n",
+      "       spam       0.90      0.89      0.90       159\n",
+      "\n",
+      "avg / total       0.89      0.89      0.89       299\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "forest = RandomForestClassifier()\n",
+    "forest.fit(train_x, train_y)\n",
+    "predict_y = forest.predict(test_x)\n",
+    "print(classification_report(test_y, predict_y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "C рандомным лесом ещё чуть-чуть получше."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Вывод: скорее всего, проблема с тем, что с собсвенными фичами стало хуже, заключается в том, что нужно ещё поподбирать параметры, поиграть с настройками, добавить ещё несколько фичей, и всё, на самом деле, будет гораздо лучше. Но если брать только длину сообщения в словах и количество букв капсом, показатели резко падают, потому что, видимо, данных становится слишком мало."
+   ]
   }
  ],
  "metadata": {
