third task. small addition it was a large hw

--- a/ml_hw2.ipynb
+++ b/ml_hw2.ipynb
@@ -1593,6 +1593,141 @@
    "source": [
     "Вывод: скорее всего, проблема с тем, что с собсвенными фичами стало хуже, заключается в том, что нужно ещё поподбирать параметры, поиграть с настройками, добавить ещё несколько фичей, и всё, на самом деле, будет гораздо лучше. Но если брать только длину сообщения в словах и количество букв капсом, показатели резко падают, потому что, видимо, данных становится слишком мало."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 371,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>message</th>\n",
+       "      <th>word_length</th>\n",
+       "      <th>num_of_caps</th>\n",
+       "      <th>num_of_punct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5537</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>Want explicit SEX in 30 secs? Ring 02073162414...</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5540</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>ASKED 3MOBILE IF 0870 CHATLINES INCLU IN FREE ...</td>\n",
+       "      <td>33</td>\n",
+       "      <td>104</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5547</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>Had your contract mobile 11 Mnths? Latest Moto...</td>\n",
+       "      <td>28</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5566</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>REMINDER FROM O2: To get 2.50 pounds free call...</td>\n",
+       "      <td>28</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5567</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>This is the 2nd time we have tried 2 contact u...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     label                                            message  word_length  \\\n",
+       "5537  spam  Want explicit SEX in 30 secs? Ring 02073162414...           16   \n",
+       "5540  spam  ASKED 3MOBILE IF 0870 CHATLINES INCLU IN FREE ...           33   \n",
+       "5547  spam  Had your contract mobile 11 Mnths? Latest Moto...           28   \n",
+       "5566  spam  REMINDER FROM O2: To get 2.50 pounds free call...           28   \n",
+       "5567  spam  This is the 2nd time we have tried 2 contact u...           30   \n",
+       "\n",
+       "      num_of_caps  num_of_punct  \n",
+       "5537           17             2  \n",
+       "5540          104             0  \n",
+       "5547           20             2  \n",
+       "5566           14             0  \n",
+       "5567            9             1  "
+      ]
+     },
+     "execution_count": 371,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# А если добавить ещё одну фичу, пока есть время?\n",
+    "def count_punct(text):\n",
+    "    return len([sym for sym in text if sym in '!?'])\n",
+    "balanced['num_of_punct'] = balanced['message'].map(count_punct)\n",
+    "balanced.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 372,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        ham       0.85      0.81      0.83       157\n",
+      "       spam       0.80      0.85      0.82       142\n",
+      "\n",
+      "avg / total       0.83      0.83      0.83       299\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sms_y = balanced['label']\n",
+    "sms_x = balanced.loc[:, ('word_length', 'num_of_caps', 'num_of_punct')]\n",
+    "train_x, test_x, train_y, test_y = train_test_split(sms_x, sms_y, test_size=0.2)\n",
+    "\n",
+    "tree = DecisionTreeClassifier()\n",
+    "tree.fit(train_x, train_y)\n",
+    "predict_y = tree.predict(test_x)\n",
+    "print(classification_report(test_y, predict_y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Стало похуже... ну ладно."
+   ]
   }
  ],
  "metadata": {
