slowly doing hw

--- a/ml_hw3.ipynb
+++ b/ml_hw3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Логистическая регрессия"
+    "# Логистическая регрессия: Южный Парк"
    ]
   },
   {
@@ -26,12 +26,176 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from nltk import word_tokenize\n",
+    "from nltk import word_tokenize \n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer\n",
     "from sklearn.metrics import classification_report, f1_score, accuracy_score, confusion_matrix\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.model_selection import StratifiedKFold, cross_val_score, train_test_split"
+    "from sklearn.model_selection import StratifiedKFold, cross_val_score, train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Вытаскиваю и нормирую данные."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Episode</th>\n",
+       "      <th>Character</th>\n",
+       "      <th>Line</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Stan</td>\n",
+       "      <td>You guys, you guys! Chef is going away. \\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Kyle</td>\n",
+       "      <td>Going away? For how long?\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Stan</td>\n",
+       "      <td>Forever.\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chef</td>\n",
+       "      <td>I'm sorry boys.\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Stan</td>\n",
+       "      <td>Chef said he's been bored, so he joining a gro...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Season Episode Character                                               Line\n",
+       "0     10       1      Stan         You guys, you guys! Chef is going away. \\n\n",
+       "1     10       1      Kyle                        Going away? For how long?\\n\n",
+       "2     10       1      Stan                                         Forever.\\n\n",
+       "3     10       1      Chef                                  I'm sorry boys.\\n\n",
+       "4     10       1      Stan  Chef said he's been bored, so he joining a gro..."
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SO_PARK = pandas.read_csv('All-seasons.csv', sep=',')\n",
+    "SO_PARK.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Под главными персонажами я поняла четвёрку главных."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "stan = SO_PARK[SO_PARK['Character'] == 'Stan']\n",
+    "kyle = SO_PARK[SO_PARK['Character'] == 'Kyle']\n",
+    "eric = SO_PARK[SO_PARK['Character'] == 'Cartman']\n",
+    "kenny = SO_PARK[SO_PARK['Character'] == 'Kenny']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stan: 7680\n",
+      "kyle: 7099\n",
+      "eric: 9774\n",
+      "kenny: 881\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('stan: ' + str(len(stan)))\n",
+    "print('kyle: ' + str(len(kyle)))\n",
+    "print('eric: ' + str(len(eric)))\n",
+    "print('kenny: ' + str(len(kenny)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Данные несбалансированы, потому что Кенни говорит слишком мало. При этом данных очень много, потому что это все сезоны. Поэтому я, пожалуй, просто выкину часть лишних данных."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "stan = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
